# open-data-product-hamburg-points-of-interest-source-aligned

./: .gitignore  README.md  data-product-manifest.yml  data-product.yml  data-transformation-03-gold-geo.yml  data-transformation-03-gold.yml  dpds.yml  main.ipynb  main.py  odps.yml  pyproject.toml
.github/workflows/: crawl-content.yaml
data/hamburg-points-of-interest-2024-06/: hamburg-points-of-interest-art-galleries-2024-06-details.csv  hamburg-points-of-interest-bars-2024-06-details.csv  hamburg-points-of-interest-beer-gardens-2024-06-details.csv  hamburg-points-of-interest-cafes-2024-06-details.csv  hamburg-points-of-interest-car-sharing-stations-2024-06-details.csv  hamburg-points-of-interest-childcare-2024-06-details.csv  hamburg-points-of-interest-clinics-2024-06-details.csv  hamburg-points-of-interest-community-centers-2024-06-details.csv  hamburg-points-of-interest-convenience-stores-2024-06-details.csv  hamburg-points-of-interest-forests-2024-06-details.json  hamburg-points-of-interest-kindergartens-2024-06-details.csv  hamburg-points-of-interest-parks-2024-06-details.csv  hamburg-points-of-interest-parks-2024-06-details.json  hamburg-points-of-interest-pubs-2024-06-details.csv  hamburg-points-of-interest-restaurants-2024-06-details.csv  hamburg-points-of-interest-sbahn-stops-2024-06-details.csv  hamburg-points-of-interest-schools-2024-06-details.csv  hamburg-points-of-interest-sport-centers-2024-06-details.csv  hamburg-points-of-interest-theaters-2024-06-details.csv  (+1 more)
docs/: data-product-canvas.md  dpds-canvas.md  odps-canvas.md
lib/: quarter_assigner.py
(+1841 files in other folders)
